--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,13 @@
 server.port=8081
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/Mytutor
+spring.datasource.url=jdbc:mysql://mytutor.cd4lc0tdspol.us-east-1.rds.amazonaws.com:3306/Mytutor?user=admin&password=vasumishra890
 
-spring.datasource.username=dwijesh
-spring.datasource.password=password
-
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.initialization-mode=ALWAYS
+spring.jpa.hibernate.ddl-auto=update
 
 
 spring.mail.host=smtp.gmail.com
