sql password endpoint changed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.initialization-mode=ALWAYS
 spring.jpa.hibernate.ddl-auto=update
-
+java.runtime.version=11
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
