--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8081
 
 
-spring.datasource.url=jdbc:mysql://mytutor.cd4lc0tdspol.us-east-1.rds.amazonaws.com:3306/Mytutor?user=admin&password=vasumishra890
+spring.datasource.url=jdbc:mysql://blxuoocrwsqo0zkosaap-mysql.services.clever-cloud.com:3306/blxuoocrwsqo0zkosaap?user=u77xf57mhr150e4g&password=X4rkbelAfISQfcd672zz
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
