--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8081
 
 
 spring.datasource.url=jdbc:mysql://blxuoocrwsqo0zkosaap-mysql.services.clever-cloud.com:3306/blxuoocrwsqo0zkosaap?user=u77xf57mhr150e4g&password=X4rkbelAfISQfcd672zz
-
+#spring.datasource.url=jdbc:mysql://localhost:3306/Mytutor?user=dwijesh&password=password
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
