--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,6 +13,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+     - uses: actions/checkout@v3
+     - uses: actions/setup-java@v3
+        with:
+        java-version: '11'
+        distribution: 'adopt'
+     - run: mvn --batch-mode --update-snapshots verify
+     - run: mvn compile war:war
+     - uses: actions/checkout@v3
+     - name: Build the Docker image
+       run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
