--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,6 +20,4 @@ jobs:
         distribution: 'adopt'
      - run: mvn --batch-mode --update-snapshots verify
      - run: mvn compile war:war
-     - uses: actions/checkout@v3
-     - name: Build the Docker image
-       run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+     - run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
