--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,4 +20,25 @@ jobs:
         distribution: 'adopt'
      - run: mvn --batch-mode --update-snapshots verify
      - run: mvn compile war:war
+     - name: Build with Maven
+     - run: mvn clean package --file pom.xml
+
+     - uses: actions/checkout@v1
+
+     - run: mkdir -p target/
+
+     - name: Temporarily save jar artifact
+       uses: actions/upload-artifact@v2
+       with:
+        name: jar-artifact
+        path: ${{ github.workspace }}/target/*.war
+        retention-days: 1
+  deploy:
+     runs-on: ubuntu-18.04
+     needs: build
+     steps:
+     - uses: actions/upload-artifact@v1
+       with:
+          name: jar-artifact
+          path: target/
      - run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
