--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,7 +21,7 @@ jobs:
           path: target/DevOpsPipeline.war
     
       - name: Upload artifact. 
-      - uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v2
         with:
           name: DevOpsPipeline.war
           path: target/*.war
