--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,27 +1,58 @@
-name: Maven Package
-
+name: Build and Push docker image to Docker Hub
 on:
-  [push]
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
-  build:
+  Build:
     runs-on: ubuntu-latest
-    steps:    
-      - uses: actions/checkout@v2    
-      - name: Set up JDK 11      
-        uses: actions/setup-java@v1      
-        with:        
-          java-version: '11'
-      - name: Build package      
-        run: mvn --batch-mode package --file pom.xml  
-      - name: Upload build artifacts       
-        uses: actions/upload-artifact@v2      
-        with:        
-          name: DevOpsPipeline.war        
-          path: target/final.war
-    
-      - name: Download artifact
-        uses: actions/download-artifact@v2
-        
-      - run: pwd 
-      - run: docker build -t dwijesh515/mytutor .
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up JDK 11
+      uses: actions/setup-java@v1
+      with:
+        java-version: '11'
+
+    - name: Build package
+      run: mvn --batch-mode package --file pom.xml
+    #  env:
+      #  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  
+    - name: Create artifacts directory and copy war file
+    #  run: mkdir artifacts && cp target/*.war artifacts
+
+      uses: actions/upload-artifact@v2
+      with:
+        name: DevOpsPipeline.war
+        path: target/DevOpsPipeline.war
+
+
+  Publish:
+
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up JDK 11
+      uses: actions/setup-java@v1
+      with:
+        java-version: '11' 
+
+    - name: Update version
+      run: mvn -B versions:set -DnewVersion=v${{github.run_number}} -DgenerateBackupPoms=false
+ 
+    - name: Setup Docker Buildx
+      uses: docker/setup-buildx-action@v1
+     
+ #    - name: Login to DockerHub
+ #      uses: docker/login-action@v1
+ #      with:
+ #        username: ${{ secrets.DOCKERHUB_USERNAME }}
+ #        password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+    - name: Download artifact
+      uses: actions/download-artifact@v2
+
+    - name: Build and push
+      run: docker build -t dwijesh515/mytutor .
