--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,9 +1,6 @@
 name: Build and Push docker image to Docker Hub
 on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+  [push]
 
 
 jobs:
