--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,21 +14,23 @@ jobs:
         java-version: '11'
 
     - name: Build package
-      run: mvn --batch-mode package --file pom.xml
+      run: mvn compile war:war 
     #  env:
       #  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   
     - name: Create artifacts directory and copy war file
-    #  run: mkdir artifacts && cp target/*.war artifacts
+      run: mkdir artifacts && cp target/*.war artifacts
 
       uses: actions/upload-artifact@v2
       with:
-        name: DevOpsPipeline.war
-        path: target/DevOpsPipeline.war
+        name: final.war
+        path: target/final.war
+    
+    - run: ls 
+    - run: ls target
 
 
   Publish:
-
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -40,8 +42,8 @@ jobs:
     - name: Update version
       run: mvn -B versions:set -DnewVersion=v${{github.run_number}} -DgenerateBackupPoms=false
  
-    - name: Setup Docker Buildx
-      uses: docker/setup-buildx-action@v1
+#    - name: Setup Docker Buildx
+#      uses: docker/setup-buildx-action@v1
      
  #    - name: Login to DockerHub
  #      uses: docker/login-action@v1
@@ -51,6 +53,8 @@ jobs:
 
     - name: Download artifact
       uses: actions/download-artifact@v2
+
+    - run: ls target
 
     - name: Build and push
       run: docker build -t dwijesh515/mytutor .
