--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -54,7 +54,7 @@ jobs:
     - name: Download artifact
       uses: actions/download-artifact@v2
 
-    - run: ls target
+    - run: ls
 
     - name: Build and push
       run: docker build -t dwijesh515/mytutor .
